# boltzmann-experimentation

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  run_experiments.sh  tune_lr.sh
src/boltz/config/: literals.py  settings.py
src/boltz/data/: dataset.py  loaders.py
src/boltz/factories/: dataset_factory.py  model_factory.py  training_components_factory.py
src/boltz/models/: densenet.py  two_layer_perceptron.py
src/boltz/schemas/: training_components.py
src/boltz/training/: baselines.py  experiment.py  loss.py  miner.py  model.py  training_loop.py  validator.py
src/boltz/utils/: logger.py
src/boltz/wandb/: cli.py
src/boltzmann_experimentation/: dataset.py  experiment.py  legacy.py  literals.py  logger.py  loss.py  main.py  miner.py  model.py  settings.py  validator.py
src/boltzmann_experimentation/config/: literals.py  settings.py
src/boltzmann_experimentation/data/: loaders.py
src/boltzmann_experimentation/factories/: __init__.py  dataset_factory.py  model_factory.py  training_components_factory.py
src/boltzmann_experimentation/models/: __init__.py  densenet.py  simple_cnn.py
src/boltzmann_experimentation/schemas/: __init__.py  miner_slice.py  training_components.py
src/boltzmann_experimentation/training/: experiment.py  loss.py  miner.py  model.py  training_loop.py  validator.py
src/boltzmann_experimentation/utils/: logger.py
src/texp/config/: settings.py
src/texp/data/: loaders.py
src/texp/factories/: dataset_factory.py  model_factory.py
src/texp/models/: sinle_layer_perceptron.py
src/texp/schemas/: miner_slice.py  training_components.py
src/texp/training/: baselines.py  miner.py  model.py  training_loop.py  validator.py
src/texp/utils/: logger.py
src/texp/wandb/: cli.py
tests/unit/: test_densenet.py  test_training_loop.py  test_training_step.py  test_validator.py
